Fixed 'run' statement for Install Swiftlint step

--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -14,7 +14,7 @@ jobs:
         uses: Homebrew/actions/setup-homebrew@master
         
       - name: Install Swiftlint
-        shell: brew install swiftlint
+        run: brew install swiftlint
           
       - name: Danger
         uses: danger/swift@3.5.0
