Danger Swiftlint file updated as the main one

--- a/.swiftlint-danger.yml
+++ b/.swiftlint-danger.yml
@@ -1,5 +1,4 @@
 opt_in_rules:
-  - function_default_parameter_at_end
   - implicit_return
   - modifier_order
   - first_where
@@ -28,12 +27,10 @@ disabled_rules:
   - function_parameter_count
   - cyclomatic_complexity
   - nesting
+  - duplicate_imports
   - todo
 excluded:
-- Pods
-- R.generated.swift
-included:
-- Inbound
+- AltSwiftUITests.swift
 function_body_length:
   warning: 60
   error: 100
@@ -42,7 +39,7 @@ line_length:
   error: 600
 custom_rules:
   travel_verb_getter_function:
-    name: "TID: Verb Prefixed Getter Function" 
+    name: "Verb Prefixed Getter Function" 
     regex: '(?<=func\s)(get|calculate|fetch|retrieve|generate)\w+\([^\)]*\)[\n\t\s]+\-\>[\n\t\s]+\w+\??[\n\t\s]+\{'
     message: "Avoid the use of verbs on getter methods unless its a mutating/nonmutating method pair or a factory method."
   
