--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 env:
-  DEVELOPER_DIR: /Applications/Xcode_12_beta.app/Contents/Developer
+  DEVELOPER_DIR: /Applications/Xcode_13.app/Contents/Developer
 
 jobs:
   build:
